--- a/action.yml
+++ b/action.yml
@@ -5,30 +5,19 @@ branding:
   color: blue
   icon: code
 inputs:
-  script:
-    description: The script to run
-    required: true
-  github-token:
-    description: The GitHub token used to create an authenticated client
+  remote-secret-one:
+    description: This will inherit a secret from the Action Repo
+    required: false
+  remote-secret-two:
+    description: This will inherit a secret from the Action Repo
     default: ${{ github.token }}
     required: false
-  debug:
-    description: Whether to tell the GitHub client to log details of its requests. true or false. Default is to run in debug mode when the GitHub Actions step debug logging is turned on.
-    default: ${{ runner.debug == '1' }}
-  user-agent:
-    description: An optional user-agent string
-    default: actions/github-script
-  previews:
-    description: A comma-separated list of API previews to accept
-  result-encoding:
-    description: Either "string" or "json" (default "json")—how the result will be encoded
-    default: json
-  retries:
-    description: The number of times to retry a request
-    default: "0"
-  retry-exempt-status-codes:
-    description: A comma separated list of status codes that will NOT be retried e.g. "400,500". No effect unless `retries` is set
-    default: 400,401,403,404,422 # from https://github.com/octokit/plugin-retry.js/blob/9a2443746c350b3beedec35cf26e197ea318a261/src/index.ts#L14
+  passthrough-one:
+    description: This will pass a secret or variable to the Action
+    required: false
+  passthrough-two:
+    description: This will pass a secret or variable to the Action
+    required: false
 outputs:
   result:
     description: The return value of the script, stringified with `JSON.stringify`
